--- a/Zaika/packages.config
+++ b/Zaika/packages.config
@@ -6,4 +6,6 @@
   <package id="MaterialDesignThemes" version="1.5.0.523" targetFramework="net452" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.4" targetFramework="net452" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net452" />
+  <package id="MicroLite" version="6.2.9" targetFramework="net452" />
+  <package id="Npgsql" version="3.0.5" targetFramework="net452" />
 </packages>
