--- a/Zaika/Zaika.csproj
+++ b/Zaika/Zaika.csproj
@@ -93,6 +93,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Core\DB.cs" />
+    <Compile Include="Core\LastOperation.cs" />
     <Compile Include="Core\Operation.cs" />
     <Compile Include="Core\Producer.cs" />
     <Compile Include="Core\Product.cs" />
@@ -121,10 +122,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ProductInfo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProducerInfo.xaml.cs">
       <DependentUpon>ProducerInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ProductInfo.xaml.cs">
+      <DependentUpon>ProductInfo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
